# gitpull

./: .gitignore  README.md  gitpull.py  pyproject.toml
src/gitpull/: __init__.py  cli.py  core.py
src/gitpull_go/: __init__.py  cli.py  core.py
