[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitpull"
version = "1.0.0"
description = "Download GitHub repos via zip archive - works around proxy restrictions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["git", "github", "download", "proxy"]

[project.scripts]
gitpull = "gitpull.cli:main"

[project.urls]
Homepage = "https://github.com/GanizaniSitara/gitpull"
Repository = "https://github.com/GanizaniSitara/gitpull"

[tool.setuptools.packages.find]
where = ["src"]
